Revert IDEA auto code cleanup that removed valid functionality